After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744288 - gdk_gl_context_set_required_version() handles version requests <3.0 inconsistently
gdk_gl_context_set_required_version() handles version requests <3.0 inconsist...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-02-10 20:37 UTC by Niels Nesse
Modified: 2015-03-06 13:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Warn users when they attempt to request a GL context version less than 3.2 (1.67 KB, patch)
2015-02-10 20:37 UTC, Niels Nesse
none Details | Review

Description Niels Nesse 2015-02-10 20:37:57 UTC
Created attachment 296539 [details] [review]
Warn users when they attempt to request a GL context version less than 3.2

A request for a 1.4 context will be changed to a request for a 3.4 context and fail whereas a request for a 1.2 context will be changed to a request for a 3.2 context and succeed. Neither 1.2 or 1.4 contexts are supported but the behavior of the gdkgl should be consistent.

I've attached a patch that fixes this inconsistency and also warns the user if they request a version less than 3.2.
Comment 1 Alexander Larsson 2015-03-06 13:06:26 UTC
pushed to master